Add the div to hold the popup page

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       type="text/css"
       media="screen"
     />
+    <link rel="stylesheet" href="css/projects.css" />
   </head>
   <body>
     <section class="container">
@@ -158,7 +159,7 @@
         <!---Card 1-->
         <div class="card">
           <div class="card-img">
-            <img src="images/comp.png" alt="" />
+            <img src="images/comp.png" alt="project" />
           </div>
           <div class="card-title">
             <h1>Multi-Post Stories Gain+Glory</h1>
@@ -390,6 +391,8 @@
         </div>
       </div>
     </section>
+    <!-- Popup sectionk -->
+    <section class="project-popup dflex" style="display: none"></section>
 
     <!--About me section-->
     <section class="about-me-sec" id="About">
