--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       </div>
     </section>
     <!-- Popup sectionk -->
-    <section class="project-popup dflex" style="display: none"></section>
+    <section class="project-popup dflex" style="display: none;"></section>
 
     <!--About me section-->
     <section class="about-me-sec" id="About">
