--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       </div>
     </section>
     <!-- Popup sectionk -->
-    <section class="project-popup dflex" style="display: none; justify-content: space-between;"></section>
+    <section class="project-popup dflex" style="display: none"></section>
     <div class="overlay"></div>
 
     <!--About me section-->
