--- a/index.html
+++ b/index.html
@@ -579,6 +579,7 @@
             required
           ></textarea>
           <button type="submit">Get in touch</button>
+          <div class="error"></div>
         </form>
         <div class="form-img">
           <img src="images/Frame.svg" alt="Frame" />
