Add desktop version popup

--- a/index.html
+++ b/index.html
@@ -623,3 +623,27 @@
     <script src="./index.js"></script>
   </body>
 </html>
+
+<div class="content">
+  <div>
+    <h1 class="font-fam">${projectData.description}</h1>
+  </div>
+
+  <div class="desktoponly dflex">
+    <a
+      href="${projectData.seeSource}"
+      class="green-back font-fam btn-container"
+    >
+      <button class="btn">
+        See Live
+        <img src="images/see live icon.svg" alt="see source" />
+      </button>
+    </a>
+    <a href="${projectData.seeSource}" class="green-back font-fam">
+      <button class="btn">
+        See source>
+        <img src="images/Vector.png" alt="see live" />
+      </button>
+    </a>
+  </div>
+</div>
