--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/Inter/Inter-VariableFont_slnt,wght.ttf" />
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
